--- a/DeliveryIngesup/DeliveryIngesup/DeliveryIngesup.csproj
+++ b/DeliveryIngesup/DeliveryIngesup/DeliveryIngesup.csproj
@@ -112,7 +112,7 @@
     </Compile>
     <Compile Include="Manager\DeliveryManager.cs" />
     <Compile Include="Manager\IDeliveryManager.cs" />
-    <Compile Include="Manager\MockDeliveryManager.cs" />
+    <Compile Include="Manager\IUserManager.cs" />
     <Compile Include="Manager\UserManager.cs" />
     <Compile Include="Models\Commande.cs" />
     <Compile Include="Models\CommandeProduit.cs" />
@@ -123,6 +123,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite.cs" />
     <Compile Include="SQLiteAsync.cs" />
+    <Compile Include="ViewModel\CommandeViewModel.cs" />
     <Compile Include="ViewModel\InscriptionViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
