Tests unitaires des DeliveryManager et UserManager

--- a/DeliveryIngesup/DeliveryIngesupTests/DeliveryIngesupTests.csproj
+++ b/DeliveryIngesup/DeliveryIngesupTests/DeliveryIngesupTests.csproj
@@ -108,6 +108,7 @@
     <AppxPackageIncludePrivateSymbols>true</AppxPackageIncludePrivateSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DeliveryManagerTests.cs" />
     <Compile Include="UserManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -115,7 +116,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="DeliveryIngesupTests_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\UnitTestLogo.scale-100.png">
