--- a/DeliveryIngesup/DeliveryIngesup/packages.config
+++ b/DeliveryIngesup/DeliveryIngesup/packages.config
@@ -3,8 +3,9 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="win81" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="win81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="win81" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="win81" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="win81" />
   <package id="SQLite.Net-PCL" version="2.5.1" targetFramework="win81" />
   <package id="sqlite-net" version="1.0.8" targetFramework="win81" />
-  <package id="SQLiteNetExtensions" version="1.2.3" targetFramework="win81" />
+  <package id="SQLiteNetExtensions" version="1.2.5" targetFramework="win81" />
+  <package id="WinRtBehaviors" version="1.0.3" targetFramework="win81" />
 </packages>
