--- a/DeliveryIngesup/DeliveryIngesup/packages.config
+++ b/DeliveryIngesup/DeliveryIngesup/packages.config
@@ -3,4 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="win81" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="win81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="win81" />
+  <package id="SQLite.Net.Async-PCL" version="2.5.1" targetFramework="win81" />
+  <package id="SQLite.Net.Platform.WinRT" version="2.5.1" targetFramework="win81" />
+  <package id="SQLite.Net-PCL" version="2.5.1" targetFramework="win81" />
 </packages>
