--- a/DeliveryIngesup/DeliveryIngesupTests/packages.config
+++ b/DeliveryIngesup/DeliveryIngesupTests/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="win81" />
+  <package id="SQLite.Net.Async-PCL" version="2.5.1" targetFramework="win81" />
+  <package id="SQLite.Net.Platform.WinRT" version="2.5.1" targetFramework="win81" />
   <package id="SQLite.Net-PCL" version="2.5.1" targetFramework="win81" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="win81" />
   <package id="SQLiteNetExtensions" version="1.2.3" targetFramework="win81" />
 </packages>
