--- a/DeliveryIngesup/DeliveryIngesup/DeliveryIngesup.csproj
+++ b/DeliveryIngesup/DeliveryIngesup/DeliveryIngesup.csproj
@@ -110,10 +110,6 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Manager\DeliveryManager.cs" />
-    <Compile Include="Manager\IDeliveryManager.cs" />
-    <Compile Include="Manager\IUserManager.cs" />
-    <Compile Include="Manager\UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CommandeViewModel.cs" />
     <Compile Include="ViewModel\InscriptionViewModel.cs" />
@@ -132,6 +128,7 @@
     <Compile Include="Views\Panier.xaml.cs">
       <DependentUpon>Panier.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WSClient\Proxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -185,15 +182,8 @@
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
-    <Reference Include="SQLite.Net, Version=2.5.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\SQLite.Net-PCL.2.5.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLite.Net.Async">
-      <HintPath>..\packages\SQLite.Net.Async-PCL.2.5.1\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.Async.dll</HintPath>
-    </Reference>
-    <Reference Include="SQLite.Net.Platform.WinRT">
-      <HintPath>..\packages\SQLite.Net.Platform.WinRT.2.5.1\lib\Windows8\SQLite.Net.Platform.WinRT.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\netcore45\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -205,9 +195,9 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj">
-      <Project>{A43C48B2-DCF5-4063-85EB-67D68462F5E7}</Project>
-      <Name>DataAccess</Name>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{68c2c283-9aae-4d89-af62-a69e8c6ec114}</Project>
+      <Name>Model</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
