--- a/DeliveryIngesup/DeliveryIngesup/packages.config
+++ b/DeliveryIngesup/DeliveryIngesup/packages.config
@@ -3,7 +3,5 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="win81" />
   <package id="MvvmLight" version="5.1.1.0" targetFramework="win81" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="win81" />
-  <package id="SQLite.Net.Async-PCL" version="2.5.1" targetFramework="win81" />
-  <package id="SQLite.Net.Platform.WinRT" version="2.5.1" targetFramework="win81" />
-  <package id="SQLite.Net-PCL" version="2.5.1" targetFramework="win81" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="win81" />
 </packages>
