--- a/DeliveryIngesup/WebServices/packages.config
+++ b/DeliveryIngesup/WebServices/packages.config
@@ -9,4 +9,7 @@
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SQLite.Net.Platform.Win32" version="2.5.1" targetFramework="net45" />
+  <package id="SQLite.Net-PCL" version="2.5.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.96.0" targetFramework="net45" />
 </packages>
